Added a WIP /deals command for IsThereAnyDeals API

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "image-to-base64": "^2.2.0",
+    "itad-api-client-ts": "^1.0.4",
     "node-fetch": "2.6.1",
     "sun-tzu-quotes": "^1.0.0"
   }
