--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "dependencies": {
-    "@discordjs/builders": "^0.15.0",
     "@discordjs/rest": "^0.4.1",
     "aws-sdk": "^2.1130.0",
-    "deep-object-diff": "^1.1.7",
     "discord-command-cooldown": "^1.0.8",
     "discord-economy-super": "^1.5.2",
-    "discord.js": "13.9.0",
+    "discord.js": "^14.2.0",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "image-to-base64": "^2.2.0",
