--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@discordjs/opus": "^0.8.0",
     "@discordjs/rest": "^0.4.1",
+    "@discordjs/voice": "^0.11.0",
     "aws-sdk": "^2.1130.0",
     "discord-command-cooldown": "^1.0.8",
     "discord-economy-super": "^1.5.2",
@@ -12,6 +14,7 @@
     "javascript-time-ago": "^2.5.4",
     "mysql": "^2.18.1",
     "node-fetch": "2.6.1",
+    "play-dl": "^1.9.5",
     "songlink-api": "^1.0.0",
     "steamapi": "^2.2.0",
     "sun-tzu-quotes": "^1.0.0"
