--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "node-fetch": "2.6.1",
     "play-dl": "^1.9.5",
     "songlink-api": "^1.0.0",
-    "steamapi": "^2.2.0",
-    "sun-tzu-quotes": "^1.0.0"
+    "steamapi": "^2.2.0"
   }
 }
