--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mysql": "^2.18.1",
     "node-fetch": "2.6.1",
     "play-dl": "^1.9.5",
+    "qrcode": "^1.5.1",
     "songlink-api": "^1.0.0",
     "steamapi": "^2.2.0"
   }
