--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "play-dl": "^1.9.5",
     "qrcode": "^1.5.1",
     "songlink-api": "^1.0.0",
-    "steamapi": "^2.2.0"
+    "steamapi": "^2.2.0",
+    "twitch-m3u8": "^1.1.5"
   }
 }
