Completely reworked the economy (tannercoin) system and updated packages

--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
     "@discordjs/rest": "^0.4.1",
-    "@discordjs/voice": "^0.11.0",
+    "@discordjs/voice": "^0.16.0",
     "aws-sdk": "^2.1130.0",
     "discord-command-cooldown": "^1.0.8",
     "discord-economy-super": "^1.5.2",
-    "discord.js": "^14.2.0",
+    "discord-speech-recognition": "^3.3.1",
+    "discord.js": "^14.5.0",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "image-to-base64": "^2.2.0",
@@ -15,7 +16,7 @@
     "m3u8stream": "^0.8.6",
     "mysql": "^2.18.1",
     "node-fetch": "2.6.1",
-    "play-dl": "^1.9.5",
+    "play-dl": "^1.9.6",
     "qrcode": "^1.5.1",
     "songlink-api": "^1.0.0",
     "steamapi": "^2.2.0",
